--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@ redirect_from:
 
 <h2 style="margin-left: 20px;">FAQ - Frequently Asked Questions</h2>
 
-<section class="latest">
+<section class="faq">
   <details>
     <summary>Details</summary>
     Something small enough to escape casual notice.
