--- a/faq.html
+++ b/faq.html
@@ -16,6 +16,34 @@ redirect_from:
       Something small enough to escape casual notice.
     </p>
   </details>
+
+  <details>
+    <summary>Details</summary>
+    <p>
+      Something small enough to escape casual notice.
+    </p>
+  </details>
+
+  <details>
+    <summary>Details</summary>
+    <p>
+      Something small enough to escape casual notice.
+    </p>
+  </details>
+
+  <details>
+    <summary>Details</summary>
+    <p>
+      Something small enough to escape casual notice.
+    </p>
+  </details>
+
+  <details>
+    <summary>Details</summary>
+    <p>
+      Something small enough to escape casual notice.
+    </p>
+  </details>
 </section>
 
 <nav class="pagination">
