--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@ redirect_from:
 
 <section class="faq">
   <details>
-    <summary>Details</summary>
+    <summary>How to contact me?</summary>
     <p>
       Something small enough to escape casual notice.
     </p>
