--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@ redirect_from:
   <details>
     <summary>How to contact me?</summary>
     <p>
-      Something small enough to escape casual notice.
+      You can contact me at: Signal (Ask my number), <a href="https://matrix.to/#/@atius:beeper.com">Matrix</a>, <a href="https://t.me/amyiscoolz">Telegram</a>, <a href="https://www.instagram.com/amyiscoolz/">Instagram</a>, Email (atiusamy@murena.io), iMessage (amy.amyiscoolz@gmail.com), Discord (@atiusamy).
     </p>
   </details>
 
