--- a/faq.html
+++ b/faq.html
@@ -18,30 +18,111 @@ redirect_from:
   </details>
 
   <details>
-    <summary>Details</summary>
+    <summary>Who's Amy?</summary>
     <p>
-      Something small enough to escape casual notice.
+      Me! Although, if you're from YouTube or know me Pre-2023 you might recognized me by other name. Just remember that you can always call me Amy! I love the name!
     </p>
   </details>
 
   <details>
-    <summary>Details</summary>
+    <summary>Who's Atius</summary>
     <p>
-      Something small enough to escape casual notice.
+      Me also, but it's my YouTube alias. idk what else to say.
     </p>
   </details>
 
   <details>
-    <summary>Details</summary>
+    <summary>Are you a boy or a girl</summary>
     <p>
-      Something small enough to escape casual notice.
+      I'm a grill 🍖♨️🔥🥩🥓🍳
+      In all seriousness though, I am a transgender girl. Whether you think that makes me a boy or a girl, it's up to you. I don't want to hurt your precious feelings.
     </p>
   </details>
 
   <details>
-    <summary>Details</summary>
+    <summary>Where are you from?</summary>
     <p>
-      Something small enough to escape casual notice.
+      Thailand, not my favorite country. Get me outta here!
+    </p>
+  </details>
+
+  <details>
+    <summary>Why are you an athiest?</summary>
+    <p>
+      I just can't believe in religion, though I can't say I have anything against it (Aside from Theocracy which I think is different from just plain relgiion).
+      I come from a religious minority here in Thailand (Catholic in a Buddhist Country), and it was brought communities together so I can't say it's entirely bad.
+    </p>
+  </details>
+</section>
+
+  <details>
+    <summary>Why did you leave high school early?</summary>
+    <p>
+      I didn't like my high school. I don't like cutting my hair, I don't like being lonely. I just decided to go for it. It's not like the best excuse but that's my true feelings.
+    </p>
+  </details>
+</section>
+
+  <details>
+    <summary>What's your favorite Dinosaur?</summary>
+    <p>
+      It's a tie between Utahraptors and Crows! I think they're both super awesome! 
+    </p>
+  </details>
+</section>
+
+  <details>
+    <summary>Your favorite group of animals?</summary>
+    <p>
+      Should be relatively obvious but I like all reptiles! (Including birds). 
+    </p>
+  </details>
+</section>
+
+  <details>
+    <summary>What do you want to be in the future?</summary>
+    <p>
+      Either some kind of Ecologist/Zoologist, I'm not super sure yet but it's in that area.
+    </p>
+  </details>
+</section>
+
+  <details>
+    <summary>Do you use Linux?</summary>
+    <p>
+      For now yeah, I am not that techy though, Windows just annoys me.
+    </p>
+  </details>
+</section>
+
+  <details>
+    <summary>Any Social Media I can follow you on?</summary>
+    <p>
+      At the moment, none. I can't use X/Twitter because I have ethical concerns about it. I can't use Fediverse because I don't really fit in, but once more people move to the Fediverse, I'm glad to revive <a href="https://sauropods.win/@AmyIsCoolz">my account</a> again!
+    </p>
+  </details>
+</section>
+
+
+  <details>
+    <summary>When are you gonna upload another video?</summary>
+    <p>
+      When I'm not busy.
+    </p>
+  </details>
+
+  <details>
+    <summary>Who's Dapper?</summary>
+    <p>
+      Deadname, rarely used anymore
+    </p>
+  </details>
+</section>
+
+  <details>
+    <summary>Who's Nam?</summary>
+    <p>
+      The demon that lives in my soul. I must stop him at all cost.
     </p>
   </details>
 </section>
