--- a/faq.html
+++ b/faq.html
@@ -62,6 +62,20 @@ redirect_from:
   </details>
 
   <details>
+    <summary>What is your major?</summary>
+    <p>
+      Biological Science! A lot of Biology (Especially Ecology, Zoology, Paleontology, and Botany is really fun!
+    </p>
+  </details>
+
+  <details>
+    <summary>What are your preferred pronouns?</summary>
+    <p>
+      She/her
+    </p>
+  </details>
+
+  <details>
     <summary>What's your favorite Dinosaur?</summary>
     <p>
       It's a tie between Utahraptors and Crows! I think they're both super awesome! 
