--- a/faq.html
+++ b/faq.html
@@ -95,6 +95,14 @@ redirect_from:
       Either some kind of Ecologist/Zoologist, I'm not super sure yet but it's in that area.
     </p>
   </details>
+  
+  <details>
+    <summary>What games do I play?</summary>
+    <p>
+      Minecraft, Genshin Impact, and Jurassic World Evolution 2 mainly!
+    </p>
+  </details>
+
 
   <details>
     <summary>Do you use Linux?</summary>
