--- a/faq.html
+++ b/faq.html
@@ -10,6 +10,7 @@ redirect_from:
 <h2 style="margin-left: 20px;">FAQ - Frequently Asked Questions</h2>
 
 <section class="faq">
+<h3 style="margin-left: 20px;">About Me</h3>
   <details>
     <summary>How to contact me?</summary>
     <p>
@@ -74,6 +75,8 @@ redirect_from:
       She/her
     </p>
   </details>
+
+<h3 style="margin-left: 20px;">About my interests</h3>
 
   <details>
     <summary>What's your favorite Dinosaur?</summary>
