--- a/faq.html
+++ b/faq.html
@@ -26,13 +26,6 @@ redirect_from:
   </details>
 
   <details>
-    <summary>Who's Atius</summary>
-    <p>
-      Me also, but it's my YouTube alias. idk what else to say.
-    </p>
-  </details>
-
-  <details>
     <summary>Are you a boy or a girl</summary>
     <p>
       I'm a grill 🍖♨️🔥🥩🥓🍳
@@ -48,10 +41,24 @@ redirect_from:
   </details>
 
   <details>
+    <summary>Can you speak less?</summary>
+    <p>
+      Yes... but speaking distracts me from having my brain doubting and assaulting me with mean words :( I'm sorry I spoke too much!
+    </p>
+  </details>
+
+  <details>
     <summary>Why are you an athiest?</summary>
     <p>
       I just can't believe in religion, though I can't say I have anything against it (Aside from Theocracy which I think is different from just plain relgiion).
       I come from a religious minority here in Thailand (Catholic in a Buddhist Country), and it was brought communities together so I can't say it's entirely bad.
+    </p>
+  </details>
+
+  <details>
+    <summary>Any Social Media I can follow you on?</summary>
+    <p>
+      At the moment, none. I can't use X/Twitter because I have ethical concerns about it. I can't use Fediverse because I don't really fit in, but once more people move to the Fediverse, I'm glad to revive <a href="https://sauropods.win/@AmyIsCoolz">my account</a> again!
     </p>
   </details>
 
@@ -106,7 +113,6 @@ redirect_from:
     </p>
   </details>
 
-
   <details>
     <summary>Do you use Linux?</summary>
     <p>
@@ -114,10 +120,12 @@ redirect_from:
     </p>
   </details>
 
+<h3 style="margin-left: 20px;">About my YT</h3>
+
   <details>
-    <summary>Any Social Media I can follow you on?</summary>
+    <summary>Who's Atius?</summary>
     <p>
-      At the moment, none. I can't use X/Twitter because I have ethical concerns about it. I can't use Fediverse because I don't really fit in, but once more people move to the Fediverse, I'm glad to revive <a href="https://sauropods.win/@AmyIsCoolz">my account</a> again!
+      Me also, but it's my YouTube alias. idk what else to say.
     </p>
   </details>
 
@@ -125,6 +133,23 @@ redirect_from:
     <summary>When are you gonna upload another video?</summary>
     <p>
       When I'm not busy.
+    </p>
+  </details>
+
+  <details>
+    <summary>When do you Live Stream?</summary>
+    <p>
+      Usually Friday, 7:00-800 UTC+7. 
+    </p>
+  </details>
+
+<h3 style="margin-left: 20px;">About my past</h3>
+
+
+  <details>
+    <summary>Why do you leave [insert community]?</summary>
+    <p>
+      I left because it wasn't enjoying it nor is it also not relevant to my goals (Long term and Short term), and I have thought about it a while. Either that or I just got bored and left. 
     </p>
   </details>
 
