--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ redirect_from:
       </div>
       <div class="details">
         <h2>Hi! I'm Amy / Atius</h2>
-        <p>I'm a trans girl :3 (technically also a Minecraft YouTuber) I'm Thai and I live in Thailand. Not very good at most things I do, but I do it anyways. I can speak Thai and English (though very broken grammar) Nothing much else to say!</p>
+        <p>I'm a trans girl :3 (technically also a Minecraft YouTuber) I'm Thai and I live in Thailand. Not very good at most things I do, but I do it anyways. I can speak Thai and English (though very broken grammar), currently dating <a href="https://winsdominoes.net/">WinsDominoes</a> ❤️❤️❤️. Nothing much else to say!</p>
         <p>You've found my website!</p>
         <a href="faq">
           <button class="faqButton">FAQ</button>
