--- a/faq.html
+++ b/faq.html
@@ -26,7 +26,7 @@ redirect_from:
   </details>
 
   <details>
-    <summary>Are you a boy or a girl</summary>
+    <summary>Are you a boy or a girl?</summary>
     <p>
       I'm a grill 🍖♨️🔥🥩🥓🍳
       In all seriousness though, I am a transgender girl. Whether you think that makes me a boy or a girl, it's up to you. I don't want to hurt your precious feelings.
@@ -48,7 +48,7 @@ redirect_from:
   </details>
 
   <details>
-    <summary>Why are you an athiest?</summary>
+    <summary>Why are you an atheist?</summary>
     <p>
       I just can't believe in religion, though I can't say I have anything against it (Aside from Theocracy which I think is different from just plain relgiion).
       I come from a religious minority here in Thailand (Catholic in a Buddhist Country), and it was brought communities together so I can't say it's entirely bad.
@@ -105,6 +105,20 @@ redirect_from:
       Either some kind of Ecologist/Zoologist, I'm not super sure yet but it's in that area.
     </p>
   </details>
+
+  <details>
+    <summary>Do you like Cooking?</summary>
+    <p>
+      Yes I do! I'm not very good yet but I believe I will be good soon! I really enjoy it.
+    </p>
+  </details>
+
+  <details>
+    <summary>Do you do arts?</summary>
+    <p>
+      Kinda... I enjoy drawing but I am so bad I don't really wanna talk about it.
+    </p>
+  </details>
   
   <details>
     <summary>What games do I play?</summary>
@@ -143,8 +157,21 @@ redirect_from:
     </p>
   </details>
 
-<h3 style="margin-left: 20px;">About my past</h3>
+  <details>
+    <summary>Is Kon Suan Tood Dead?</summary>
+    <p>
+      Idk, it's currently on an indefinite hiatus due to busyness but I do want to revive it at some point.
+    </p>
+  </details>
 
+  <details>
+    <summary>Is it possible to collab with me?</summary>
+    <p>
+      It is! My timezone is notoriously hard to work with though, but I am in <a href="https://discord.gg/bq5cfvPsjQ">MC Collab Station</a> and I do participate in a lot of the events that I can!
+    </p>
+  </details>
+
+<h3 style="margin-left: 20px;">About my past</h3>
 
   <details>
     <summary>Why do you leave [insert community]?</summary>
@@ -156,7 +183,14 @@ redirect_from:
   <details>
     <summary>Who's Dapper?</summary>
     <p>
-      Deadname, rarely used anymore
+      Deadname, rarely used anymore.
+    </p>
+  </details>
+
+  <details>
+    <summary>Who's BLUEBB_333?</summary>
+    <p>
+      Ah that brings me back, that was my old internet alias. BLUE means Blue and BB means Balloon Boy! 
     </p>
   </details>
 
