--- a/faq.html
+++ b/faq.html
@@ -58,7 +58,7 @@ redirect_from:
   <details>
     <summary>Any Social Media I can follow you on?</summary>
     <p>
-      At the moment, none. I can't use X/Twitter because I have ethical concerns about it. I can't use Fediverse because I don't really fit in, but once more people move to the Fediverse, I'm glad to revive <a href="https://sauropods.win/@AmyIsCoolz">my account</a> again!
+      I have a <a href="https://social.atiusamy.com/@AmyIsCoolz">fediverse/mastodon account</a> here. It's on my own Sharkey instance
     </p>
   </details>
 
