--- a/faq.html
+++ b/faq.html
@@ -48,6 +48,13 @@ redirect_from:
   </details>
 
   <details>
+    <summary>Your last question doesn't add up, you seem very silent.</summary>
+    <p>
+      If so, I am either shy or zoning out. Just call (call as in say my name) me and I should response. If I do zone out however, please actually let me know I am not doing anything instead of keeping it to yourself and thinking I would get your cues (I wouldn't because I am zoning out like bruh).
+    </p>
+  </details>
+
+  <details>
     <summary>Why are you an atheist?</summary>
     <p>
       I just can't believe in religion, though I can't say I have anything against it (Aside from Theocracy which I think is different from just plain relgiion).
