--- a/faq.html
+++ b/faq.html
@@ -14,7 +14,7 @@ redirect_from:
   <details>
     <summary>How to contact me?</summary>
     <p>
-      You can contact me at: <a href="https://signal.me/#eu/rKNiLxVIo5AQWu30nFHElgXPGcbvkwOus-LdWATJOiiH-ZaBVcxPZacelAmNQk8A">Signal</a>, <a href="https://matrix.to/#/@atius:beeper.com">Matrix</a>, <a href="https://t.me/amyiscoolz">Telegram</a>, <a href="https://www.instagram.com/amyiscoolz/">Instagram</a>, Email (atiusamy@murena.io), iMessage (amy.amyiscoolz@gmail.com), Discord (@atiusamy).
+      You can contact me at: <a href="https://signal.me/#eu/rKNiLxVIo5AQWu30nFHElgXPGcbvkwOus-LdWATJOiiH-ZaBVcxPZacelAmNQk8A">Signal</a>, <a href="https://matrix.to/#/@amyiscoolz:chat.atiusamy.com">Matrix</a>, <a href="https://t.me/amyiscoolz">Telegram</a>, <a href="https://www.instagram.com/amyiscoolz/">Instagram</a>, Email (atiusamy@murena.io), iMessage (amy.amyiscoolz@gmail.com), Discord (@atiusamy).
     </p>
   </details>
 
