--- a/faq.html
+++ b/faq.html
@@ -65,7 +65,7 @@ redirect_from:
   <details>
     <summary>Any Social Media I can follow you on?</summary>
     <p>
-      I have a <a href="https://social.atiusamy.com/@AmyIsCoolz">fediverse/mastodon account</a> here. It's on my own Sharkey instance
+      I have a <a href="https://social.atiusamy.com/@AmyIsCoolz">fediverse account</a> here. It's on my own Sharkey instance (You can follow using a Mastodon account). You can also follow me bridged on Bluesky at @AmyIsCoolz.social.atiusamy.com.ap.brid.gy
     </p>
   </details>
 
@@ -130,7 +130,7 @@ redirect_from:
   <details>
     <summary>What games do I play?</summary>
     <p>
-      Minecraft, Genshin Impact, and Jurassic World Evolution 2 mainly!
+      Minecraft, Genshin Impact, Paleo Pines and Jurassic World Evolution 2 mainly!
     </p>
   </details>
 
