added links page and button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ redirect_from:
         <a href="faq">
           <button class="faqButton">FAQ</button>
         </a>
+        <a href="links">
+          <button class="linksButton">FAQ</button>
+        </a>
     </div>
   </div>
 </div>   
