--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ redirect_from:
           <button class="faqButton">FAQ</button>
         </a>
         <a href="links">
-          <button class="linksButton">FAQ</button>
+          <button class="linksButton">Links</button>
         </a>
     </div>
   </div>
