--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ redirect_from:
         <h2>Hi! I'm Amy / Atius</h2>
         <p>I'm a trans girl :3 (technically also a Minecraft YouTuber) I'm Thai and I live in Thailand. Not very good at most things I do, but I do it anyways. I can speak Thai and English (though very broken grammar), currently dating <a href="https://winsdominoes.net/">WinsDominoes</a> ❤️❤️❤️. Nothing much else to say!</p>
         <p>You've found my website!</p>
-        <a href="faq">
+        <a href="faq" style="font-size: 0">
           <button class="faqButton">FAQ</button>
         </a>
-        <a href="links">
+        <a href="links" style="font-size: 0">
           <button class="linksButton">Links</button>
         </a>
     </div>
