update links page

--- a/links.html
+++ b/links.html
@@ -6,6 +6,13 @@ redirect_from:
   - /archive/1/
   - /archive/1
 ---
+<h2 style="margin-left: 20px;">Links - My linktree!</h2>
+
+<section class="links">
+  <h2 style="margin-left: 20px;">Socials</h2>
+  <h2 style="margin-left: 20px;">Recommended Contacts</h2>
+  <h2 style="margin-left: 20px;">Not-so Recommended Contacts</h2>
+</section>
 
 <nav class="pagination">
     {% if paginator.previous_page %}
