--- a/links.html
+++ b/links.html
@@ -12,6 +12,7 @@ redirect_from:
   <h2 style="margin-left: 20px;">Socials</h2>
   <h2 style="margin-left: 20px;">Recommended Contacts</h2>
   <h2 style="margin-left: 20px;">Not-so Recommended Contacts</h2>
+  <h2 style="margin-left: 20px;">My stuff</h2>
 </section>
 
 <nav class="pagination">
