updated links page

--- a/links.html
+++ b/links.html
@@ -10,9 +10,52 @@ redirect_from:
 
 <section class="links">
   <h3 style="margin-left: 20px;">Socials</h3>
+    <div class="gridSection">
+      <div class="gridItem">
+        sharkey
+      </div>
+
+      <div class="gridItem">
+        pixelfed
+      </div>
+
+      <div class="gridItem">
+        instagram
+      </div>
+    </div>
   <h3 style="margin-left: 20px;">Recommended Contacts</h3>
+    <div class="gridSection">
+      <div class="gridItem">
+        signal
+      </div>
+      <div class="gridItem">
+        matrix
+      </div>
+      <div class="gridItem">
+        imessage
+      </div>
+    </div>
   <h3 style="margin-left: 20px;">Not-so Recommended Contacts</h3>
+    <div class="gridSection">
+      <div class="gridItem">
+        telegram
+      </div>
+      <div class="gridItem">
+        discord
+      </div>
+      <div class="gridItem">
+        email
+      </div>
+      <div class="gridItem">
+        steam
+      </div>
+    </div>
   <h3 style="margin-left: 20px;">My stuff</h3>
+    <div class="gridSection">
+      <div class="gridItem">
+        mcmods
+      </div>
+    </div>
 </section>
 
 <nav class="pagination">
