--- a/links.html
+++ b/links.html
@@ -9,7 +9,7 @@ redirect_from:
 <h2 style="margin-left: 20px;">Links - My linktree!</h2>
 
 <section class="links">
-  <h3 style="margin-left: 20px;">Socials</h3>
+  <h3>Socials</h3>
     <div class="gridSection">
       <div class="gridItem">
         sharkey
@@ -23,7 +23,7 @@ redirect_from:
         instagram
       </div>
     </div>
-  <h3 style="margin-left: 20px;">Recommended Contacts</h3>
+  <h3>Recommended Contacts</h3>
     <div class="gridSection">
       <div class="gridItem">
         signal
@@ -35,7 +35,7 @@ redirect_from:
         imessage
       </div>
     </div>
-  <h3 style="margin-left: 20px;">Not-so Recommended Contacts</h3>
+  <h3>Not-so Recommended Contacts</h3>
     <div class="gridSection">
       <div class="gridItem">
         telegram
@@ -50,7 +50,7 @@ redirect_from:
         steam
       </div>
     </div>
-  <h3 style="margin-left: 20px;">My stuff</h3>
+  <h3>My stuff</h3>
     <div class="gridSection">
       <div class="gridItem">
         mcmods
