--- a/links.html
+++ b/links.html
@@ -11,18 +11,70 @@ redirect_from:
 <section class="links">
   <h3>Socials</h3>
     <div class="gridSection">
-      <div class="gridItem">
-        sharkey
-      </div>
+      <a class="gridItem" href="https://social.atiusamy.com/@AmyIsCoolz">
+        <img src="{{ site.baseurl }}/images/social/sharkey.png" alt="Sharkey Icon">
+        <div class="details">
+          <h2>Fediverse</h2>
+          <p>
+            @AmyIsCoolz
+          </p>
+        </div>
+      </a>
 
-      <div class="gridItem">
-        pixelfed
-      </div>
+      <a class="gridItem" href="https://instagram.com/amyiscoolz">
+        <img src="{{ site.baseurl }}/images/social/instagram.svg" alt="Instagram Icon">
+        <div class="details">
+          <h2>Instagram</h2>
+          <p>
+            @atius
+          </p>
+        </div>
+      </a>
 
-      <div class="gridItem">
-        instagram
-      </div>
+      <a class="gridItem" href="https://pixelfed.social/AmyIsCoolz">
+        <img src="{{ site.baseurl }}/images/social/pixelfed.svg" alt="Pixelfed Icon">
+        <div class="details">
+          <h2>Pixelfed</h2>
+          <p>
+            @AmyIsCoolz
+          </p>
+        </div>
+      </a>
+
+      <a class="gridItem" href="https://bsky.app/profile/AmyIsCoolz.social.atiusamy.com.ap.brid.gy">
+        <img src="{{ site.baseurl }}/images/social/bluesky.jpg" alt="Bluesky Icon">
+        <div class="details">
+          <h2>Bluesky</h2>
+          <p>
+            @amyiscoolz
+          </p>
+        </div>
+      </a>
     </div>
+
+  <h3>YouTube related Socials</h3>
+    <div class="gridSection">
+      <a class="gridItem" href="https://social.atiusamy.com/@atius">
+        <img src="{{ site.baseurl }}/images/social/sharkey.png" alt="Sharkey Icon">
+        <div class="details">
+          <h2>Fediverse (YT)</h2>
+          <p>
+            @atius
+          </p>
+        </div>
+      </a>
+
+      <a class="gridItem" href="https://bsky.app/profile/atius.social.atiusamy.com.ap.brid.gy">
+        <img src="{{ site.baseurl }}/images/social/bluesky.jpg" alt="Bluesky Icon">
+        <div class="details">
+          <h2>Bluesky</h2>
+          <p>
+            @atius
+          </p>
+        </div>
+      </a>
+    </div>
+
   <h3>Recommended Contacts</h3>
     <div class="gridSection">
       <div class="gridItem">
@@ -52,6 +104,9 @@ redirect_from:
     </div>
   <h3>My stuff</h3>
     <div class="gridSection">
+      <div class="gridItem">
+        youtube
+      </div>
       <div class="gridItem">
         mcmods
       </div>
