added icons and updated

--- a/links.html
+++ b/links.html
@@ -77,39 +77,111 @@ redirect_from:
 
   <h3>Recommended Contacts</h3>
     <div class="gridSection">
-      <div class="gridItem">
-        signal
-      </div>
-      <div class="gridItem">
-        matrix
-      </div>
-      <div class="gridItem">
-        imessage
-      </div>
+      <a class="gridItem" href="https://signal.me/#eu/rKNiLxVIo5AQWu30nFHElgXPGcbvkwOus-LdWATJOiiH-ZaBVcxPZacelAmNQk8A">
+        <img src="{{ site.baseurl }}/images/social/signal.svg" alt="Signal Icon">
+        <div class="details">
+          <h2>Signal</h2>
+          <p>
+            amyiscoolz.33
+          </p>
+        </div>
+      </a>
+
+      <a class="gridItem" href="https://matrix.to/#/@amyiscoolz:chat.atiusamy.com">
+        <img src="{{ site.baseurl }}/images/social/fluffychat.svg" alt="Matrix Icon">
+        <div class="details">
+          <h2>Matrix</h2>
+          <p>
+            @atius
+          </p>
+        </div>
+      </a>
+
+      <a class="gridItem" href="#">
+        <img src="{{ site.baseurl }}/images/social/imessage.svg" alt="iMessage Icon">
+        <div class="details">
+          <h2>iMessage</h2>
+          <p>
+            amy.amyiscoolz@gmail.com
+          </p>
+        </div>
+      </a>
     </div>
   <h3>Not-so Recommended Contacts</h3>
     <div class="gridSection">
-      <div class="gridItem">
-        telegram
-      </div>
-      <div class="gridItem">
-        discord
-      </div>
-      <div class="gridItem">
-        email
-      </div>
-      <div class="gridItem">
-        steam
-      </div>
+      <a class="gridItem" href="https://t.me/amyiscoolz">
+        <img src="{{ site.baseurl }}/images/social/telegram.svg" alt="Telegram Icon">
+        <div class="details">
+          <h2>Telegram</h2>
+          <p>
+            amyiscoolz
+          </p>
+        </div>
+      </a>
+      
+      <a class="gridItem" href="#">
+        <img src="{{ site.baseurl }}/images/social/discord.svg" alt="Discord Icon">
+        <div class="details">
+          <h2>Discord</h2>
+          <p>
+            atiusamy
+          </p>
+        </div>
+      </a>
+
+      <a class="gridItem" href="#">
+        <img src="{{ site.baseurl }}/images/social/email.svg" alt="Email Icon">
+        <div class="details">
+          <h2>Email</h2>
+          <p>
+            atiusamy@murena.io
+          </p>
+        </div>
+      </a>
+
+      <a class="gridItem" href="#">
+        <img src="{{ site.baseurl }}/images/social/steam.svg" alt="Steam Icon">
+        <div class="details">
+          <h2>Steam</h2>
+          <p>
+            AtiusAmy
+          </p>
+        </div>
+      </a>
     </div>
   <h3>My stuff</h3>
     <div class="gridSection">
-      <div class="gridItem">
-        youtube
-      </div>
-      <div class="gridItem">
-        mcmods
-      </div>
+      <a class="gridItem" href="https://modrinth.com/user/AtiusAmy">
+        <img src="{{ site.baseurl }}/images/social/modrinth.svg" alt="Modrinth Icon">
+        <div class="details">
+          <h2>Modrinth</h2>
+          <p>
+            AtiusAmy
+          </p>
+        </div>
+      </a>
+
+      <a class="gridItem" href="https://github.com/AtiusAmy">
+        <img src="{{ site.baseurl }}/images/social/github.svg" alt="GitHub Icon">
+        <div class="details">
+          <h2>GitHub</h2>
+          <p>
+            AtiusAmy
+          </p>
+        </div>
+      </a>
+    </div>
+  <h3>Very attractive person</h3>
+    <div class="gridSection">
+      <a class="gridItem" href="https://winsdominoes.net">
+        <img src="{{ site.baseurl }}/images/social/winsdominoes.webp" alt="Win's Icon">
+        <div class="details">
+          <h2>Win's Website</h2>
+          <p>
+            winsdominoes.net
+          </p>
+        </div>
+      </a>
     </div>
 </section>
 
