--- a/links.html
+++ b/links.html
@@ -46,7 +46,7 @@ redirect_from:
         <div class="details">
           <h2>Bluesky</h2>
           <p>
-            @amyiscoolz
+            AmyIsCoolz.social.atiusamy.com.ap.brid.gy
           </p>
         </div>
       </a>
@@ -67,9 +67,9 @@ redirect_from:
       <a class="gridItem" href="https://bsky.app/profile/atius.social.atiusamy.com.ap.brid.gy">
         <img src="{{ site.baseurl }}/images/social/bluesky.jpg" alt="Bluesky Icon">
         <div class="details">
-          <h2>Bluesky</h2>
+          <h2>Bluesky (Bridged)</h2>
           <p>
-            @atius
+            atius.social.atiusamy.com.ap.brid.gy
           </p>
         </div>
       </a>
@@ -152,7 +152,7 @@ redirect_from:
   <h3>My stuff</h3>
     <div class="gridSection">
       <a class="gridItem" href="https://modrinth.com/user/AtiusAmy">
-        <img src="{{ site.baseurl }}/images/social/modrinth.svg" alt="Modrinth Icon">
+        <img src="{{ site.baseurl }}/images/social/modrinth.svg" alt="Modrinth Icon" style="backgroud-color: black;">
         <div class="details">
           <h2>Modrinth</h2>
           <p>
@@ -162,7 +162,7 @@ redirect_from:
       </a>
 
       <a class="gridItem" href="https://github.com/AtiusAmy">
-        <img src="{{ site.baseurl }}/images/social/github.svg" alt="GitHub Icon">
+        <img src="{{ site.baseurl }}/images/social/github.svg" alt="GitHub Icon" style="background-color: white;">
         <div class="details">
           <h2>GitHub</h2>
           <p>
