--- a/links.html
+++ b/links.html
@@ -152,7 +152,7 @@ redirect_from:
   <h3>My stuff</h3>
     <div class="gridSection">
       <a class="gridItem" href="https://modrinth.com/user/AtiusAmy">
-        <img src="{{ site.baseurl }}/images/social/modrinth.svg" alt="Modrinth Icon" style="backgroud-color: black;">
+        <img src="{{ site.baseurl }}/images/social/modrinth.svg" alt="Modrinth Icon">
         <div class="details">
           <h2>Modrinth</h2>
           <p>
@@ -162,7 +162,7 @@ redirect_from:
       </a>
 
       <a class="gridItem" href="https://github.com/AtiusAmy">
-        <img src="{{ site.baseurl }}/images/social/github.svg" alt="GitHub Icon" style="background-color: white;">
+        <img src="{{ site.baseurl }}/images/social/github.svg" alt="GitHub Icon" style="background-color: white; padding: 5px">
         <div class="details">
           <h2>GitHub</h2>
           <p>
