--- a/links.html
+++ b/links.html
@@ -26,7 +26,7 @@ redirect_from:
         <div class="details">
           <h2>Instagram</h2>
           <p>
-            @atius
+            amyiscoolz
           </p>
         </div>
       </a>
@@ -92,7 +92,7 @@ redirect_from:
         <div class="details">
           <h2>Matrix</h2>
           <p>
-            @atius
+            @amyiscoolz:chat.atiusamy.com
           </p>
         </div>
       </a>
