--- a/links.html
+++ b/links.html
@@ -44,7 +44,7 @@ redirect_from:
       <a class="gridItem" href="https://bsky.app/profile/AmyIsCoolz.social.atiusamy.com.ap.brid.gy">
         <img src="{{ site.baseurl }}/images/social/bluesky.jpg" alt="Bluesky Icon">
         <div class="details">
-          <h2>Bluesky</h2>
+          <h2>Bluesky (Bridgd)</h2>
           <p>
             AmyIsCoolz.social.atiusamy.com.ap.brid.gy
           </p>
@@ -110,7 +110,7 @@ redirect_from:
   <h3>Not-so Recommended Contacts</h3>
     <div class="gridSection">
       <a class="gridItem" href="https://t.me/amyiscoolz">
-        <img src="{{ site.baseurl }}/images/social/telegram.svg" alt="Telegram Icon">
+        <img src="{{ site.baseurl }}/images/social/telegram.svg" alt="Telegram Icon" style="background-color: white; padding: 5px">
         <div class="details">
           <h2>Telegram</h2>
           <p>
