--- a/links.html
+++ b/links.html
@@ -129,7 +129,7 @@ redirect_from:
         </div>
       </a>
 
-      <a class="gridItem" href="#">
+      <a class="gridItem" href="mailto:atiusamy@murena.io">
         <img src="{{ site.baseurl }}/images/social/email.svg" alt="Email Icon">
         <div class="details">
           <h2>Email</h2>
@@ -139,7 +139,7 @@ redirect_from:
         </div>
       </a>
 
-      <a class="gridItem" href="#">
+      <a class="gridItem" href="https://steamcommunity.com/id/AtiusAmy/">
         <img src="{{ site.baseurl }}/images/social/steam.svg" alt="Steam Icon">
         <div class="details">
           <h2>Steam</h2>
