--- a/links.html
+++ b/links.html
@@ -152,7 +152,7 @@ redirect_from:
   <h3>My stuff</h3>
     <div class="gridSection">
       <a class="gridItem" href="https://modrinth.com/user/AtiusAmy">
-        <img src="{{ site.baseurl }}/images/social/modrinth.svg" alt="Modrinth Icon">
+        <img src="{{ site.baseurl }}/images/social/modrinth.svg" alt="Modrinth Icon" style="background-color: black; padding: 5px">
         <div class="details">
           <h2>Modrinth</h2>
           <p>
