--- a/links.html
+++ b/links.html
@@ -151,6 +151,16 @@ redirect_from:
     </div>
   <h3>My stuff</h3>
     <div class="gridSection">
+      <a class="gridItem" href="https://www.youtube.com/@atius">
+        <img src="{{ site.baseurl }}/images/social/youtube.png" alt="GitHub Icon" style="background-color: white; padding: 5px">
+        <div class="details">
+          <h2>YouTube</h2>
+          <p>
+            Atius
+          </p>
+        </div>
+      </a>
+    </div>
       <a class="gridItem" href="https://modrinth.com/user/AtiusAmy">
         <img src="{{ site.baseurl }}/images/social/modrinth.svg" alt="Modrinth Icon" style="background-color: black; padding: 5px">
         <div class="details">
