--- a/links.html
+++ b/links.html
@@ -152,7 +152,7 @@ redirect_from:
   <h3>My stuff</h3>
     <div class="gridSection">
       <a class="gridItem" href="https://www.youtube.com/@atius">
-        <img src="{{ site.baseurl }}/images/social/youtube.png" alt="GitHub Icon" style="background-color: white; padding: 5px">
+        <img src="{{ site.baseurl }}/images/youtube.png" alt="YouTube Icon" style="background-color: white; padding: 5px">
         <div class="details">
           <h2>YouTube</h2>
           <p>
