--- a/links.html
+++ b/links.html
@@ -44,7 +44,7 @@ redirect_from:
       <a class="gridItem" href="https://bsky.app/profile/AmyIsCoolz.social.atiusamy.com.ap.brid.gy">
         <img src="{{ site.baseurl }}/images/social/bluesky.jpg" alt="Bluesky Icon">
         <div class="details">
-          <h2>Bluesky (Bridgd)</h2>
+          <h2>Bluesky (Bridged)</h2>
           <p>
             AmyIsCoolz.social.atiusamy.com.ap.brid.gy
           </p>
