--- a/faq.html
+++ b/faq.html
@@ -90,6 +90,13 @@ redirect_from:
     </p>
   </details>
 
+  <details>
+    <summary>Have you taken HRT? if so how long?</summary>
+    <p>
+      Yup, since 17/11/2023
+    </p>
+  </details>
+
 <h3 style="margin-left: 20px;">About my interests</h3>
 
   <details>
